Updated 'projects.html' via CloudCannon

--- a/projects.html
+++ b/projects.html
@@ -20,23 +20,23 @@ SUPPORTED: flyleft, flyright, flyup, flydown, home, back, menu, fadein, fadeout
  
 <!-- Mirrored from withoutcoding.com/editions/preview/33/projects by HTTrack Website Copier/3.x [XR&CO'2013], Tue, 03 Nov 2015 08:49:31 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
-<HEAD>
+<head>
   <!-- InstanceBeginEditable name="doctitle" -->
   <title> projects</title>
   <!-- InstanceEndEditable -->
   <!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta name="viewport" content="width=1400">
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=1400" />
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
   <!--Link to mobile version -->
-<link rel="alternate" media="only screen and (max-width: 640px)" href="projects-2.html" >
+<link rel="alternate" media="only screen and (max-width: 640px)" href="projects-2.html" />
 
   <script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
   <script type="text/javascript" src="js/modernizr.touch.js"></script>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-          <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
-          <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
+          <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css' />
+          <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css' />
     
 
 <style type="text/css">
@@ -526,13 +526,11 @@ $(document).ready(function() {
  ga('send', 'pageview');
 
 </script>
- </HEAD>
- <BODY>
+ </head>
+ <body>
  <div id="innerinnerbody">
  <div id="innerbody">
- <div id="bg" 
-   style="background: url('jpg/362.jpg') center center no-repeat; background-size: cover;"
-  >
+ <div id="bg" style="background: url('jpg/362.jpg') center center no-repeat; background-size: cover;">
   </div>
      <div id="container">
 
@@ -565,8 +563,7 @@ $(document).ready(function() {
   
 
     <div style="overflow: hidden; position: absolute; left: 0px; top: 0px; 
-    width: 61px; height: 65px; font-size:14px;line-height:1.4em;letter-spacing:0px;text-align:left;    ; text-align: center;"
-    class="shape top left home"><i class="fa fa-bars" style="display: inline-block; font-size: 45.75px; line-height: 65px; color: rgb(255,255,255);"></i></div>
+    width: 61px; height: 65px; font-size:14px;line-height:1.4em;letter-spacing:0px;text-align:left;    ; text-align: center;" class="shape top left home"><i class="fa fa-bars" style="display: inline-block; font-size: 45.75px; line-height: 65px; color: rgb(255,255,255);"></i></div>
   
 
   
@@ -600,8 +597,7 @@ $(document).ready(function() {
 
   
   
-    <div      
-    style="overflow: auto; position: absolute; 
+    <div style="overflow: auto; position: absolute; 
     text-align: left; 
     left: 693px; 
     top: 207px; 
@@ -610,12 +606,7 @@ $(document).ready(function() {
     color: rgb(0,0,0); 
     font-size:18px;line-height:25px;letter-spacing:0px;text-align:left;;
     overflow: hidden;
-    font-weight: 300; font-family: &#039;Open Sans&#039;, sans-serif;"
-    class="wysiwyg editable growpage"><!-- InstanceBeginEditable name="content689" -->
-
-    <ul><li>Solo Recitals <a href="https://www.youtube.com/watch?v=rjkIXLtIAyw">video</a></li></ul><p> </p><ul><li>Mike del Ferro trio, "opera meets jazz", originals and standards <a href="https://www.youtube.com/watch?v=guqFkbyyhnw">video1</a>  <a href="https://www.youtube.com/watch?v=k6GXs5a15mg">video2</a></li></ul><p> </p><ul><li>Pianoduo with Jeroen van Veen <a href="https://www.youtube.com/watch?v=HQSDb-ArfTY" title="Link: https://www.youtube.com/watch?v=HQSDb-ArfTY">video</a></li></ul><p> </p><ul><li>NettaFerro, famous <a href="http://ferronetta.weebly.com/" title="Link: http://ferronetta.weebly.com/">German Folksongs</a></li></ul><p> </p><ul><li>Crossovers with traditional music/musicians worldwide <a href="https://www.youtube.com/watch?v=cM3ZvZaVirQ">video</a></li></ul><p> </p><ul><li>Clinic <a href="http://www.mikedelferro.com/education.html" title="Link: http://www.mikedelferro.com/education.html">"selfmanagement and networking for musicians".</a> Mike's very succesful workshop on how to build an international network as a starting professional musician.  Private/Skype sessions are also possible. For more information <a href="http://www.mikedelferro.com/education.html">click here</a> or email to <a title="Link: null">clinics@mikedelferro.com</a></li></ul><p> </p><ul><li>Piano Masterclasses / Artist in Residence</li></ul><br />   
-
-    <!-- InstanceEndEditable --></div>
+    font-weight: 300; font-family: &#039;Open Sans&#039;, sans-serif;" class="wysiwyg editable growpage"><!-- InstanceBeginEditable name="content689" --><ul><li>Solo Recitals, <a target="_blank" href="https://www.youtube.com/watch?v=rjkIXLtIAyw">video</a></li></ul><p>&nbsp;</p><ul><li>Mike del Ferro trio, &quot;opera meets jazz&quot;, originals and standards, <a target="_blank" href="https://www.youtube.com/watch?v=guqFkbyyhnw">video1</a>&nbsp; <a target="_blank" href="https://www.youtube.com/watch?v=k6GXs5a15mg">video2</a></li></ul><p>&nbsp;</p><ul><li>Pianoduo with Jeroen van Veen, <a target="_blank" title="Link: https://www.youtube.com/watch?v=HQSDb-ArfTY" href="https://www.youtube.com/watch?v=HQSDb-ArfTY">video</a></li></ul><p>&nbsp;</p><ul><li>Crossovers with traditional music/musicians worldwide, <a target="_blank" href="https://www.youtube.com/watch?v=cM3ZvZaVirQ">video</a></li></ul><p>&nbsp;</p><ul><li>Clinic&nbsp;<a target="_blank" title="Link: http://www.mikedelferro.com/education.html" href="http://www.mikedelferro.com/education.html">&quot;selfmanagement and networking for musicians&quot;.</a>&nbsp;Mike&#39;s very succesful workshop&nbsp;on how to build an international network as a starting professional musician.&nbsp; Private/Skype sessions are also possible. For more information&nbsp;<a target="_blank" href="http://www.mikedelferro.com/education.html">click here</a>&nbsp;or email to&nbsp;<a title="Link: null">clinics@mikedelferro.com</a></li></ul><p>&nbsp;</p><ul><li>Piano Masterclasses / Artist in Residence</li></ul><p><br /><!-- InstanceEndEditable --></p></div>
 
         
   
@@ -647,8 +638,7 @@ $(document).ready(function() {
 
   
   
-    <div      
-    style="overflow: auto; position: absolute; 
+    <div style="overflow: auto; position: absolute; 
     text-align: left; 
     left: 693px; 
     top: 96px; 
@@ -657,8 +647,7 @@ $(document).ready(function() {
     color: rgb(0,0,0); 
     font-size:59px;line-height:84px;letter-spacing:-1px;text-align:left;;
     overflow: hidden;
-    font-weight: 700; font-family: &#039;Open Sans&#039;, sans-serif;"
-    class="wysiwyg "><!-- InstanceBeginEditable name="content690" -->
+    font-weight: 700; font-family: &#039;Open Sans&#039;, sans-serif;" class="wysiwyg "><!-- InstanceBeginEditable name="content690" -->
 
     projects   
 
