Updated 'discography.html' via CloudCannon

--- a/discography.html
+++ b/discography.html
@@ -20,23 +20,23 @@ SUPPORTED: flyleft, flyright, flyup, flydown, home, back, menu, fadein, fadeout
  
 <!-- Mirrored from withoutcoding.com/editions/preview/33/discography by HTTrack Website Copier/3.x [XR&CO'2013], Tue, 03 Nov 2015 08:49:37 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
-<HEAD>
+<head>
   <!-- InstanceBeginEditable name="doctitle" -->
   <title> discography</title>
   <!-- InstanceEndEditable -->
   <!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta name="viewport" content="width=1400">
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=1400" />
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
   <!--Link to mobile version -->
-<link rel="alternate" media="only screen and (max-width: 640px)" href="discography-2.html" >
+<link rel="alternate" media="only screen and (max-width: 640px)" href="discography-2.html" />
 
   <script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
   <script type="text/javascript" src="js/modernizr.touch.js"></script>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-          <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
-          <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
+          <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css' />
+          <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css' />
     
 
 <style type="text/css">
@@ -526,13 +526,11 @@ $(document).ready(function() {
  ga('send', 'pageview');
 
 </script>
- </HEAD>
- <BODY>
+ </head>
+ <body>
  <div id="innerinnerbody">
  <div id="innerbody">
- <div id="bg" 
-   style="background: url('jpg/364.jpg') center center no-repeat; background-size: cover;"
-  >
+ <div id="bg" style="background: url('jpg/364.jpg') center center no-repeat; background-size: cover;">
   </div>
      <div id="container">
 
@@ -565,8 +563,7 @@ $(document).ready(function() {
   
 
     <div style="overflow: hidden; position: absolute; left: 0px; top: 0px; 
-    width: 61px; height: 65px; font-size:14px;font-weight:300;line-height:1.4em;letter-spacing:0px;text-align:left    ; text-align: center;"
-    class="shape top left home"><i class="fa fa-bars" style="display: inline-block; font-size: 45.75px; line-height: 65px; color: rgb(255,255,255);"></i></div>
+    width: 61px; height: 65px; font-size:14px;font-weight:300;line-height:1.4em;letter-spacing:0px;text-align:left    ; text-align: center;" class="shape top left home"><i class="fa fa-bars" style="display: inline-block; font-size: 45.75px; line-height: 65px; color: rgb(255,255,255);"></i></div>
   
 
   
@@ -600,8 +597,7 @@ $(document).ready(function() {
 
   
   
-    <div      
-    style="overflow: auto; position: absolute; 
+    <div style="overflow: auto; position: absolute; 
     text-align: left; 
     left: 694px; 
     top: 207px; 
@@ -610,12 +606,7 @@ $(document).ready(function() {
     color: rgb(255,255,255); 
     font-size:18px;line-height:25px;letter-spacing:0px;text-align:left;;
     overflow: hidden;
-    font-weight: 300; font-family: &#039;Open Sans&#039;, sans-serif;"
-    class="wysiwyg editable growpage"><!-- InstanceBeginEditable name="content962" -->
-
-    Mike del Ferro's CD's can be ordered and dowloaded at :<br /><ul><li><u>Challenge Records International</u></li><li><u>iTunes</u></li><li><u>CD Baby</u></li></ul><br /><br />1994<br />Evening Train (Acoustic Music)<br />DelFerro/Overwater/Paeffgen<br /><br />1995<br />Introducing (Hillstreet)<br />DelFerro/Vaganée Group<br /><br />1996<br />Live (A-records) <br />DelFerro/Vaganee Group<br /><br />1997<br />Dices (Acoustic Music)<br />Del Ferro/Overwater/Paeffgen<br /><br />1998<br />Make Someone Happy (del Ferro Music)<br />Mike del Ferro trio, featuring Toots Thielemans<br /><br />2000<br />Plays Belcanto  (Universal Music/Emarcy)<br />Mike del Ferro, featuring Gustav Klimt Stringquartet<br /><br />2002<br />Jazz Bridges Myanmar (American Voices) <br />Mike del Ferro trio, with musicians from Myanmar<br /><br />2005<br />Opera meets Jazz (Nicolosi Productions) <br />Mike del Ferro trio, featuring Toots Thielemans/Richard Galliano<br /><br />2006<br />Nightfly (PonyCanyon Japan)<br />Mike del Ferro trio<br /><br />2008<br />Made in Brazil (del Ferro music)<br />Mike del Ferro trio<br /><br />2008<br />Jazz Mugham Bridges (American Voices)<br />Mike del Ferro,	with musicians from Azerbaijan<br /><br />2009<br />Triangular View<br />Delferro/Ricci/Manzi<br /><br />2012<br />Happy Notes(De Werf)<br />DelFerro/Vaganée Group<br /><br />2012<br />The Journey, series, ‘songs inspired by wandering the globe' (Challenge Records Int.) <br />Mike del Ferro trio<br /><br />2013<br />Impressions from Brazil series, ‘songs inspired by wandering the globe’ (Challenge Records Int.)  <br />Mike del Ferro trio, featuring Ceumar   
-
-    <!-- InstanceEndEditable --></div>
+    font-weight: 300; font-family: &#039;Open Sans&#039;, sans-serif;" class="wysiwyg editable growpage"><!-- InstanceBeginEditable name="content962" --><p>Mike del Ferro&#39;s CD&#39;s can be ordered and dowloaded at :</p><ul><li><u>Challenge Records International</u></li><li><u>iTunes</u></li><li><u>CD Baby</u></li></ul><p>&nbsp;</p><p>2015<br />&quot;the Johannesburg sessions&quot; series, &lsquo;songs inspired by wandering the globe&rsquo; (Challenge Records Int.) &nbsp;<br />Mike del Ferro trio, featuring Mbuso Khoza</p><p>&nbsp;</p><p>2013<br />Impressions from Brazil series, &lsquo;songs inspired by wandering the globe&rsquo; (Challenge Records Int.) &nbsp;<br />Mike del Ferro trio, featuring Ceumar</p><p><br />1994<br />Evening Train (Acoustic Music)<br />DelFerro/Overwater/Paeffgen<br /><br />1995<br />Introducing (Hillstreet)<br />DelFerro/Vagan&eacute;e Group<br /><br />1996<br />Live (A-records)&nbsp;<br />DelFerro/Vaganee Group<br /><br />1997<br />Dices (Acoustic Music)<br />Del Ferro/Overwater/Paeffgen<br /><br />1998<br />Make Someone Happy (del Ferro Music)<br />Mike del Ferro trio, featuring Toots Thielemans<br /><br />2000<br />Plays Belcanto &nbsp;(Universal Music/Emarcy)<br />Mike del Ferro, featuring Gustav Klimt Stringquartet<br /><br />2002<br />Jazz Bridges Myanmar (American Voices)&nbsp;<br />Mike del Ferro trio, with musicians from Myanmar<br /><br />2005<br />Opera meets Jazz (Nicolosi Productions)&nbsp;<br />Mike del Ferro trio, featuring Toots Thielemans/Richard Galliano<br /><br />2006<br />Nightfly (PonyCanyon Japan)<br />Mike del Ferro trio<br /><br />2008<br />Made in Brazil (del Ferro music)<br />Mike del Ferro trio<br /><br />2008<br />Jazz Mugham Bridges (American Voices)<br />Mike del Ferro, with musicians from Azerbaijan<br /><br />2009<br />Triangular View<br />Delferro/Ricci/Manzi<br /><br />2012<br />Happy Notes(De Werf)<br />DelFerro/Vagan&eacute;e Group<br /><br />2012<br />The Journey, series, &lsquo;songs inspired by wandering the globe&#39; (Challenge Records Int.)<br />Mike del Ferro trio<br /><br /><!-- InstanceEndEditable --></p><p>&nbsp;</p></div>
 
         
   
@@ -647,8 +638,7 @@ $(document).ready(function() {
 
   
   
-    <div      
-    style="overflow: auto; position: absolute; 
+    <div style="overflow: auto; position: absolute; 
     text-align: left; 
     left: 693px; 
     top: 96px; 
@@ -657,8 +647,7 @@ $(document).ready(function() {
     color: rgb(255,255,255); 
     font-size:59px;line-height:84px;letter-spacing:-1px;text-align:left;;
     overflow: hidden;
-    font-weight: 700; font-family: &#039;Open Sans&#039;, sans-serif;"
-    class="wysiwyg "><!-- InstanceBeginEditable name="content963" -->
+    font-weight: 700; font-family: &#039;Open Sans&#039;, sans-serif;" class="wysiwyg "><!-- InstanceBeginEditable name="content963" -->
 
     discography   
 
