Updated '/education.html' via CloudCannon

--- a/education.html
+++ b/education.html
@@ -20,23 +20,23 @@ SUPPORTED: flyleft, flyright, flyup, flydown, home, back, menu, fadein, fadeout
  
 <!-- Mirrored from withoutcoding.com/editions/preview/33/education by HTTrack Website Copier/3.x [XR&CO'2013], Tue, 03 Nov 2015 08:49:32 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
-<HEAD>
+<head>
   <!-- InstanceBeginEditable name="doctitle" -->
   <title> education</title>
   <!-- InstanceEndEditable -->
   <!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta name="viewport" content="width=1400">
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=1400" />
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
   <!--Link to mobile version -->
-<link rel="alternate" media="only screen and (max-width: 640px)" href="education-2.html" >
+<link rel="alternate" media="only screen and (max-width: 640px)" href="education-2.html" />
 
   <script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
   <script type="text/javascript" src="js/modernizr.touch.js"></script>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-          <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-          <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
+          <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css' />
+          <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css' />
     
 
 <style type="text/css">
@@ -526,13 +526,11 @@ $(document).ready(function() {
  ga('send', 'pageview');
 
 </script>
- </HEAD>
- <BODY>
+ </head>
+ <body>
  <div id="innerinnerbody">
  <div id="innerbody">
- <div id="bg" 
-   style="background: url('jpg/363.jpg') center center no-repeat; background-size: cover;"
-  >
+ <div id="bg" style="background: url('jpg/363.jpg') center center no-repeat; background-size: cover;">
   </div>
      <div id="container">
 
@@ -568,8 +566,7 @@ $(document).ready(function() {
 
   
   
-    <div      
-    style="overflow: auto; position: absolute; 
+    <div style="overflow: auto; position: absolute; 
     text-align: left; 
     left: 693px; 
     top: 207px; 
@@ -578,12 +575,7 @@ $(document).ready(function() {
     color: rgb(255,255,255); 
     font-size:18px;line-height:25px;letter-spacing:0px;text-align:left;;
     overflow: hidden;
-    font-weight: 300; font-family: &#039;Open Sans&#039;, sans-serif;"
-    class="wysiwyg editable growpage"><!-- InstanceBeginEditable name="content691" -->
-
-    <p>  </p><p style="text-align:left;"><strong><i>Self-management and networking for musicians</i></strong><br /> </p><p style="text-align:left;">Next to piano masterclasses and private/skype lessons, Mike del Ferro gives this clinic at Conservatories and Music Faculties.</p><p style="text-align:left;"> </p><p style="text-align:left;">"It is important for starting (and non starting) musicians to have organizational and networking skills in order to create a career in music. Musicians who are starting their professional career sometimes don't really know how to get “gigs” in the world of clubs, concert halls and music festivals, especially without a management.</p><p style="text-align:left;"> </p><p style="text-align:left;">For many musicians it sounds complicated and they sometimes resist to take care of business, but if your realize that compared to mastering your instrument, taking tare of business is easy and not too much time consuming if you do it in the right way."</p><p style="text-align:left;"> </p><p style="text-align:left;">Topics:</p><p style="text-align:left;"> </p><ul><li>how to get in touch with the right people and how to create a useful database/contact list</li><li>how to maintain your network efficiently without wasting time, which will enable you to focus on your music, the most important thing!!!</li><li>how to send efficient emails</li><li>why it is essential having a good website, besides a facebookpage</li><li>how to use internet/social media</li><li>contracts and riders</li></ul><p style="text-align:left;"><br />The clinic is interactive which means questions can be asked anytime.</p><p style="text-align:left;"> </p><p style="text-align:left;">Total time:  3 hours with a 20 min.break.</p><p style="text-align:left;"> </p><p style="text-align:left;">Private and Skype sessions also possible.</p><p style="text-align:left;"> </p><p style="text-align:left;">Fore more information: clinics@mikedelferro.com<br /></p>  <br /><p></p>   
-
-    <!-- InstanceEndEditable --></div>
+    font-weight: 300; font-family: &#039;Open Sans&#039;, sans-serif;" class="wysiwyg editable growpage"><!-- InstanceBeginEditable name="content691" --><p>&nbsp;</p><p style="text-align:left;"><strong><i>Self-management and networking for musicians</i></strong><br />&nbsp;</p><p style="text-align:left;">Next to piano masterclasses and private/skype lessons, Mike del Ferro gives this clinic at Conservatories and Music Faculties all over the world.</p><p style="text-align:left;">&nbsp;</p><p style="text-align:left;"><em>"It is important for starting (and non starting) musicians to have organizational and networking skills in order to create a career in music. Musicians who are starting their professional career sometimes don't really know how to get &ldquo;gigs&rdquo; in the world of clubs, concert halls and music festivals, especially without a management.</em></p><p style="text-align:left;"><em></em></p><p style="text-align:left;"><em>For many musicians it sounds complicated and they sometimes resist to take care of business, but if your realize that compared to mastering your instrument, taking tare of business is easy and not too much time consuming if you do it in the right way."</em></p><p style="text-align:left;">&nbsp;</p><p style="text-align:left;">Topics:</p><p style="text-align:left;">&nbsp;</p><ul><li>how to get in touch with the right people and how to create a useful database/contact list</li><li>how to maintain your network efficiently without wasting time, which will enable you to focus on your music, the most important thing!!!</li><li>how to send efficient emails</li><li>why it is essential having a good website, besides a facebookpage</li><li>how to use internet/social media</li><li>contracts and riders</li></ul><p style="text-align:left;"><br />The clinic is interactive which means questions can be asked anytime.</p><p style="text-align:left;">&nbsp;</p><p style="text-align:left;">Total time: 3 hours with a 20 min.break.</p><p style="text-align:left;">&nbsp;</p><p style="text-align:left;">Private and Skype sessions also possible.</p><p style="text-align:left;">&nbsp;</p><p style="text-align:left;">Fore more information: clinics@mikedelferro.com</p><p>&nbsp;</p><p>&nbsp;</p><!-- InstanceEndEditable --><p>&nbsp;</p></div>
 
         
   
@@ -615,8 +607,7 @@ $(document).ready(function() {
 
   
   
-    <div      
-    style="overflow: auto; position: absolute; 
+    <div style="overflow: auto; position: absolute; 
     text-align: left; 
     left: 693px; 
     top: 96px; 
@@ -625,8 +616,7 @@ $(document).ready(function() {
     color: rgb(255,255,255); 
     font-size:59px;line-height:84px;letter-spacing:-1px;text-align:left;;
     overflow: hidden;
-    font-weight: 700; font-family: &#039;Open Sans&#039;, sans-serif;"
-    class="wysiwyg "><!-- InstanceBeginEditable name="content692" -->
+    font-weight: 700; font-family: &#039;Open Sans&#039;, sans-serif;" class="wysiwyg "><!-- InstanceBeginEditable name="content692" -->
 
     education   
 
@@ -659,8 +649,7 @@ $(document).ready(function() {
   
 
     <div style="overflow: hidden; position: absolute; left: 0px; top: 0px; 
-    width: 61px; height: 65px; font-size:14px;font-weight:300;line-height:1.4em;letter-spacing:0px;text-align:left    ; text-align: center;"
-    class="shape top left home"><i class="fa fa-bars" style="display: inline-block; font-size: 45.75px; line-height: 65px; color: rgb(255,255,255);"></i></div>
+    width: 61px; height: 65px; font-size:14px;font-weight:300;line-height:1.4em;letter-spacing:0px;text-align:left    ; text-align: center;" class="shape top left home"><i class="fa fa-bars" style="display: inline-block; font-size: 45.75px; line-height: 65px; color: rgb(255,255,255);"></i></div>
   
 
   
@@ -680,8 +669,7 @@ $(document).ready(function() {
     left:   692px; 
     top:    1053px; 
     width:  212px; 
-    height: 22px;" 
-    title="Link" class="url "></a>
+    height: 22px;" title="Link" class="url "></a>
   
 
 
