Updated 'contact.html' via CloudCannon

--- a/contact.html
+++ b/contact.html
@@ -606,7 +606,14 @@ $(document).ready(function() {
     color: rgb(255,255,255); 
     font-size:18px;line-height:25px;letter-spacing:0px;text-align:left;;
     overflow: hidden;
-    font-weight: 300; font-family: &#039;Open Sans&#039;, sans-serif;" class="wysiwyg editable growpage"><!-- InstanceBeginEditable name="content700" --><p>Management<br /><br />Linda Waal<br />Stroom Management, Amsterdam<br />linda@stroom.ws<br />office +31 20 40 38 444<br />mobile +31 6 24 67 88 64<br />www.stroom.ws</p><p>&nbsp;</p><p><a href="javascript:void(location.href='mailto:'+String.fromCharCode(110,101,119,115,108,101,116,116,101,114,64,109,105,107,101,100,101,108,102,101,114,114,111,46,99,111,109)+'?subject=please%20subscribe%20to%20Mike%20del%20Ferro\'s%20newsletter&amp;body=You%20will%20receive%20the%20newsletter%20once%20every%202%2F3%20months%20and%20you%20can%20unsubscribe%20any%20time.%0A%0AMany%20thanks%20for%20your%20interest.')">subscribe to newsletter</a><br /><br />question for Mike?<br /><a href="javascript:void(location.href='mailto:'+String.fromCharCode(109,105,107,101,64,109,105,107,101,100,101,108,102,101,114,114,111,46,99,111,109))">mike@mikedelferro.com </a><!-- InstanceEndEditable --></p></div>
+    font-weight: 300; font-family: &#039;Open Sans&#039;, sans-serif;" class="wysiwyg editable growpage">
+    <!--base32-414pwwvmc5q66ta2cnkpjvj5chmq8rb2dhjj0vk1dnjku8k3dxq78tbeegvk0c1240-base32-->
+    <p>Management<br /><br />Linda Waal<br />Stroom Management, Amsterdam<br />linda@stroom.ws<br />office +31 20 40 38 444<br />mobile +31 6 24 67 88 64<br />www.stroom.ws</p>
+    <p>&nbsp;</p>
+    <p><a href="javascript:void(location.href='mailto:'+String.fromCharCode(110,101,119,115,108,101,116,116,101,114,64,109,105,107,101,100,101,108,102,101,114,114,111,46,99,111,109)+'?subject=please%20subscribe%20to%20Mike%20del%20Ferro\'s%20newsletter&amp;body=You%20will%20receive%20the%20newsletter%20once%20every%202%2F3%20months%20and%20you%20can%20unsubscribe%20any%20time.%0A%0AMany%20thanks%20for%20your%20interest.')">subscribe to newsletter</a><br /><br />question for Mike?<br /><a href="javascript:void(location.href='mailto:'+String.fromCharCode(109,105,107,101,64,109,105,107,101,100,101,108,102,101,114,114,111,46,99,111,109))">mike@mikedelferro.com </a>
+      <!--base32-414pwwvmc5q66ta5dtj4at39ehgp4v3540-base32-->
+    </p>
+  </div>
 
         
   
