Updated 'contact.html' via CloudCannon

--- a/contact.html
+++ b/contact.html
@@ -607,11 +607,12 @@ $(document).ready(function() {
     font-size:18px;line-height:25px;letter-spacing:0px;text-align:left;;
     overflow: hidden;
     font-weight: 300; font-family: &#039;Open Sans&#039;, sans-serif;" class="wysiwyg editable growpage">
-    <!--base32-c9gq6t9k68pk8c9me1vqexkdccuq2dhpehgk4rveddr6mxka6nhpgvbh71t64ck4d1n6mc3pdcrp8vkaddukgutkchw72dtrehh6atb7etnk0rth68u30bb2c5tpactj-base32-->
+    <!--base32-c9gq6t9k68pp6eb7e4v78ebb6rw70utrccwput9hetrpay3bchhp6xbh69j6gw35d1kppd3jetjp8t3j6tpqguv16tq6gw37eth6gdthegv38rvb6hj32vhpdnhk6w34cdt70e3pddgp8t3nddkqax3bcdm7edtjchu74tb8d0v62x326xjq8vkb61t78u1p71uk6c32c8t66dbme1gp6x3a5nh62wv56ct0-base32-->
     <p>Management<br /><br />Linda Waal<br />Stroom Management, Amsterdam<br />linda@stroom.ws<br />office +31 20 40 38 444<br />mobile +31 6 24 67 88 64<br />www.stroom.ws</p>
     <p>&nbsp;</p>
-    <p>subscribe to newsletter&nbsp;<a href="javascript:void(location.href='mailto:'+String.fromCharCode(110,101,119,115,108,101,116,116,101,114,64,109,105,107,101,100,101,108,102,101,114,114,111,46,99,111,109)+'?subject=please%20subscribe%20to%20your%20newsletter')">newsletter@mikedelferro.com</a><br /><br />question for Mike?<br /><a href="javascript:void(location.href='mailto:'+String.fromCharCode(109,105,107,101,64,109,105,107,101,100,101,108,102,101,114,114,111,46,99,111,109))">mike@mikedelferro.com </a>
-      <!--base32-c9gq6t9k68pk8c9me1vqexkdccuq2dhpehgkat3md8u62x1k75jpgtvg6hv36d9m60pp4rbkcmtk4-base32-->
+    <p>subscribe to newsletter&nbsp;</p>
+    <p><a href="javascript:void(location.href='mailto:'+String.fromCharCode(110,101,119,115,108,101,116,116,101,114,64,109,105,107,101,100,101,108,102,101,114,114,111,46,99,111,109)+'?subject=please%20subscribe%20to%20your%20newsletter')">newsletter@mikedelferro.com</a><br /><br />question for Mike?<br /><a href="javascript:void(location.href='mailto:'+String.fromCharCode(109,105,107,101,64,109,105,107,101,100,101,108,102,101,114,114,111,46,99,111,109))">mike@mikedelferro.com </a>
+      <!--base32-c9gq6t9k68pp6eb7e4v78ebb6rw70utrccwput9hetrpay3bchhp6xbh69j6gw35d1kpprbm6dpp8e3n6rt7gcbb6wupmw37ehv6edk8ertkct1tdmv30w3g6ht64uv3dnu6pd1dc9gq6t9k68-base32-->
     </p>
   </div>
 
