--- a/projects.html
+++ b/projects.html
@@ -609,7 +609,11 @@ $(document).ready(function() {
     font-weight: 300; font-family: &#039;Open Sans&#039;, sans-serif;" class="wysiwyg editable growpage">
     <!--base32-c9gq6t9k68pk8c9me1vqexkdccuq2dhpehgk4rveddr6mxka6nhpgvbh71t64ck4d1n6mc3pdcrp8vkaddukgutkchw72dtrehh6atb7ertpet9t68u30bb2c5tpactj-base32-->
     <ul>
-      <li>Many Videos on <a data-cms-editor-link-style="undefined" target="_blank" href="https://buff.ly/2HeBOYA ">Mike del Ferro's Youtube Channel.</a></li>
+      <li>Many Videos on <a data-cms-editor-link-style="undefined" target="_blank" href="https://buff.ly/2HeBOYA "><strong>Mike del Ferro's Youtube Channel</strong></a></li>
+    </ul>
+    <p>&nbsp;</p>
+    <ul>
+      <li>Mike's trio can also be booked with Guests like <strong>Billy Cobham</strong> and <strong>Randy Brecker</strong></li>
     </ul>
     <p>&nbsp;</p>
     <ul>
