--- a/education.html
+++ b/education.html
@@ -575,7 +575,40 @@ $(document).ready(function() {
     color: rgb(255,255,255); 
     font-size:18px;line-height:25px;letter-spacing:0px;text-align:left;;
     overflow: hidden;
-    font-weight: 300; font-family: &#039;Open Sans&#039;, sans-serif;" class="wysiwyg editable growpage"><!-- InstanceBeginEditable name="content691" --><p>&nbsp;</p><p style="text-align:left;"><strong><i>Self-management and networking for musicians</i></strong><br />&nbsp;</p><p style="text-align:left;">Next to piano masterclasses and private/skype lessons, Mike del Ferro gives this clinic at Conservatories and Music Faculties all over the world.</p><p style="text-align:left;">&nbsp;</p><p style="text-align:left;"><em>"It is important for starting (and non starting) musicians to have organizational and networking skills in order to create a career in music. Musicians who are starting their professional career sometimes don't really know how to get &ldquo;gigs&rdquo; in the world of clubs, concert halls and music festivals, especially without a management.</em></p><p style="text-align:left;"><em></em></p><p style="text-align:left;"><em>For many musicians it sounds complicated and they sometimes resist to take care of business, but if your realize that compared to mastering your instrument, taking tare of business is easy and not too much time consuming if you do it in the right way."</em></p><p style="text-align:left;">&nbsp;</p><p style="text-align:left;">Topics:</p><p style="text-align:left;">&nbsp;</p><ul><li>how to get in touch with the right people and how to create a useful database/contact list</li><li>how to maintain your network efficiently without wasting time, which will enable you to focus on your music, the most important thing!!!</li><li>how to send efficient emails</li><li>why it is essential having a good website, besides a facebookpage</li><li>how to use internet/social media</li><li>contracts and riders</li></ul><p style="text-align:left;"><br />The clinic is interactive which means questions can be asked anytime.</p><p style="text-align:left;">&nbsp;</p><p style="text-align:left;">Total time: 3 hours with a 20 min.break.</p><p style="text-align:left;">&nbsp;</p><p style="text-align:left;">Private and Skype sessions also possible.</p><p style="text-align:left;">&nbsp;</p><p style="text-align:left;">Fore more information: clinics@mikedelferro.com</p><p style="text-align:left;">&nbsp;</p><p style="text-align:left;"><a href="www.facebook.com/mikedelferro3">Like this on Facebook</a></p><p>&nbsp;</p><p>&nbsp;</p><!-- InstanceEndEditable --><p>&nbsp;</p></div>
+    font-weight: 300; font-family: &#039;Open Sans&#039;, sans-serif;" class="wysiwyg editable growpage">
+    <!--base32-414pwwvmc5q66ta2cnkpjvj5chmq8rb2dhjj0vk1dnjku8k3dxq78tbeegv3jc9240-base32-->
+    <p>&nbsp;</p>
+    <p style="text-align:left;"><strong><i>Self-management and </i></strong><strong><i>Networking</i></strong><strong><i> for musicians</i></strong><br />&nbsp;</p>
+    <p style="text-align:left;">Next to piano masterclasses and private/skype lessons, Mike del Ferro gives this clinic at Conservatories and Music Faculties all over the world.</p>
+    <p style="text-align:left;">&nbsp;</p>
+    <p style="text-align:left;"><em>"It is extremely important for emerging musicians to have organizational and networking skills in order to create a career in music. Musicians who are starting their professional career sometimes don't really know how to get &ldquo;gigs&rdquo; in the world of clubs, concert halls and music festivals, especially without a management.</em></p>
+    <p style="text-align:left;"><em></em></p>
+    <p style="text-align:left;"><i>For many musicians it sounds complicated and they sometimes resist and/or fear to take care of business, but compared to mastering your instrument, this is very easy to do, and not too much time consuming.</i></p>
+    <p style="text-align:left;">&nbsp;</p>
+    <p style="text-align:left;">Topics:</p>
+    <p style="text-align:left;">&nbsp;</p>
+    <ul>
+      <li>how to get in touch with the right people and how to create a useful database/contact list</li>
+      <li>how to maintain your network efficiently without wasting time, which will enable you to focus on your music, the most important thing!!!</li>
+      <li>how to send efficient emails</li>
+      <li>why it is essential having a good website, besides a facebookpage</li>
+      <li>how to use internet/social media</li>
+      <li>contracts and riders</li>
+    </ul>
+    <p style="text-align:left;"><br />The clinic is interactive which means questions can be asked anytime.</p>
+    <p style="text-align:left;">&nbsp;</p>
+    <p style="text-align:left;">Total time: 3 hours with a 20 min.break.</p>
+    <p style="text-align:left;">&nbsp;</p>
+    <p style="text-align:left;">Private and Skype sessions also possible.</p>
+    <p style="text-align:left;">&nbsp;</p>
+    <p style="text-align:left;">Fore more information: clinics@mikedelferro.com</p>
+    <p style="text-align:left;">&nbsp;</p>
+    <p style="text-align:left;"><a href="www.facebook.com/mikedelferro3">Like this on Facebook</a></p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <!--base32-414pwwvmc5q66ta5dtj4at39ehgp4v3540-base32-->
+    <p>&nbsp;</p>
+  </div>
 
         
   
