Updated 'discography.html' via CloudCannon

--- a/discography.html
+++ b/discography.html
@@ -618,7 +618,9 @@ $(document).ready(function() {
     <p>&nbsp;</p>
     <p>2018</p>
     <p>Mike 2 (Mike Kwadraat) with Mike Bodd&eacute;</p>
-    <p><img src="/uploads/mikekwadraat-a5-web.jpg" width="877" height="1240" /></p>
+    <h3>&nbsp;</h3>
+    <p><img src="/uploads/mikekwadraat-a5-web-kopie.jpg" width="295" height="417" /></p>
+    <p>&nbsp;</p>
     <p>&nbsp;</p>
     <p>2017&nbsp;</p>
     <p><a href="https://itunes.apple.com/nl/artist/mike-del-ferro/id78450112">Slow Piano Music Volume 1</a></p>
