Updated 'discography.html' via CloudCannon

--- a/discography.html
+++ b/discography.html
@@ -617,6 +617,11 @@ $(document).ready(function() {
     <p><u>CD Baby</u></p>
     <p>&nbsp;</p>
     <p>2018</p>
+    <p><a href="https://itunes.apple.com/us/artist/mike-del-ferro-quintet/1436157006">Mike del Ferro Quintet "Autumn Sessions"</a></p>
+    <p><img src="/uploads/mike-del-ferro-quintet-digitial-kopie.jpg" width="142" height="142" /></p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>2018</p>
     <p>Mike 2 (Mike Kwadraat) with Mike Bodd&eacute;</p>
     <h3>&nbsp;</h3>
     <p><img src="/uploads/mikekwadraat-a5-web-kopie.jpg" width="295" height="417" /></p>
