--- a/education.html
+++ b/education.html
@@ -576,10 +576,13 @@ $(document).ready(function() {
     font-size:18px;line-height:25px;letter-spacing:0px;text-align:left;;
     overflow: hidden;
     font-weight: 300; font-family: &#039;Open Sans&#039;, sans-serif;" class="wysiwyg editable growpage">
-    <!--base32-414pwwvmc5q66ta2cnkpjvj5chmq8rb2dhjj0vk1dnjku8k3dxq78tbeegv3jc9240-base32-->
+    <!--base32-c9gq6t9k68pk8c9me1vqexkdccuq2dhpehgk4rveddr6mxka6nhpgvbh71t64ck4d1n6mc3pdcrp8vkaddukgutkchw72dtrehh6atb7ertpmrtt68u30bb2c5tpactj-base32-->
     <p>&nbsp;</p>
-    <p style="text-align:left;"><strong><i>Self-management and </i></strong><strong><i>Networking</i></strong><strong><i> for musicians</i></strong><br />&nbsp;</p>
-    <p style="text-align:left;">Next to piano masterclasses and private/skype lessons, Mike del Ferro gives this clinic at Conservatories and Music Faculties all over the world.</p>
+    <p style="text-align:left;"><strong><i>Self-management and </i></strong><strong><i>Networking</i></strong><strong><i> for musicians</i></strong><strong><i></i></strong></p>
+    <blockquote>
+      <p style="text-align:left;"><a href="https://www.youtube.com/watch?v=wp2Vo7wZKuY&amp;t=3s"><strong><i>watch short video</i></strong></a><br />&nbsp;</p>
+      <p style="text-align:left;">Next to piano masterclasses and private/skype lessons, Mike del Ferro gives this clinic at Conservatories and Music Faculties all over the world.</p>
+    </blockquote>
     <p style="text-align:left;">&nbsp;</p>
     <p style="text-align:left;"><em>"It is extremely important for emerging musicians to have organizational and networking skills in order to create a career in music. Musicians who are starting their professional career sometimes don't really know how to get &ldquo;gigs&rdquo; in the world of clubs, concert halls and music festivals, especially without a management.</em></p>
     <p style="text-align:left;"><em></em></p>
@@ -606,7 +609,7 @@ $(document).ready(function() {
     <p style="text-align:left;"><a href="www.facebook.com/mikedelferro3">Like this on Facebook</a></p>
     <p>&nbsp;</p>
     <p>&nbsp;</p>
-    <!--base32-414pwwvmc5q66ta5dtj4at39ehgp4v3540-base32-->
+    <!--base32-c9gq6t9k68pk8c9me1vqexkdccuq2dhpehgkat3md8u62x1k75jpgtvg6hv36d9m60pp4rbkcmtk4-base32-->
     <p>&nbsp;</p>
   </div>
 
