Updated 'discography.html' via CloudCannon

--- a/discography.html
+++ b/discography.html
@@ -625,8 +625,8 @@ $(document).ready(function() {
     <p>&nbsp;</p>
     <p>&nbsp;</p>
     <p>2019</p>
-    <p>Mike del Ferro trio featuring David Linx <a href="new album! Mike Del Ferro Trio Ft.David Linx-From One Language to Another https://buff.ly/2J2GVLB">&nbsp;"from one language to another"</a></p>
-    <p><a href="new album! Mike Del Ferro Trio Ft.David Linx-From One Language to Another https://buff.ly/2J2GVLB"><img src="/uploads/booklet-web.jpeg" /></a></p>
+    <p>Mike del Ferro trio featuring David Linx <a href="https://orcd.co/zrxqqqm">&nbsp;"from one language to another"</a></p>
+    <p><a href="https://orcd.co/zrxqqqm"><img src="/uploads/booklet-web.jpeg" /></a></p>
     <p>&nbsp;</p>
     <p>&nbsp;</p>
     <p>&nbsp;</p>
