Updated 'contact-2.html' via CloudCannon

--- a/contact-2.html
+++ b/contact-2.html
@@ -521,11 +521,11 @@ function loaded() {
     font-size:25px;line-height:35px;letter-spacing:0px;text-align:left;;
     overflow: hidden;
     font-weight: 300; font-family: &#039;Open Sans&#039;, sans-serif;" class="wysiwyg editable growpage">
-      <!--base32-414pwwvmc5q66ta2cnkpjvj5chmq8rb2dhjj0vk1dnjku8k3dxq78tbeegvkcdh240-base32-->
+      <!--base32-c9gq6t9k68pk8c9me1vqexkdccuq2dhpehgk4rveddr6mxka6nhpgvbh71t64ck4d1n6mc3pdcrp8vkaddukgutkchw72dtrehh6atb7etnp6t3868u30bb2c5tpactj-base32-->
       <p>&nbsp;</p>
       <p>&nbsp;</p>
-      <p>bookings@mikedelferro.com
-        <!--base32-414pwwvmc5q66ta5dtj4at39ehgp4v3540-base32-->
+      <p>info@mikedelferro.com
+        <!--base32-c9gq6t9k68pk8c9me1vqexkdccuq2dhpehgkat3md8u62x1k75jpgtvg6hv36d9m60pp4rbkcmtk4-base32-->
       </p>
     </div>
 
